# neural-program-simplification

./: AGENTS.md  CLAUDE.md  README.md  pyproject.toml
docs/: README.md
docs/development/: correctness.md  testing.md
docs/onboarding/: getting-started.md  glossary.md
docs/pipelines/: experiment-lifecycle.md  task-datasets.md
docs/reference/: architecture.md  configuration.md  file-reference.md
docs/research/: agenda.md
neural_program_simplification/: __init__.py  huggingface.py  model_execution.py  task_dataset_library.py  task_datasets.py  types.py
neural_program_simplification/data/: __init__.py
neural_program_simplification/data/task_datasets/: __init__.py  arithmetic_multiple_choice.json  arithmetic_multiple_choice_aug.json  factual_recall.json  factual_recall_aug.json  indirect_object_identification.json  indirect_object_identification_aug.json  python_code_completion.json  python_code_completion_aug.json  sentiment_classification.json  sentiment_classification_aug.json  translation_en_fr.json  translation_en_fr_aug.json
tests/: test_builtin_task_datasets.py  test_huggingface.py  test_model_execution.py  test_task_datasets.py
